// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePagination /> should match snapshot for hasNext 1`] = `
<span
  class="lightGrid pagination row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:center;align-content:center;align-items:center;padding:var(--global--space--0);width:100%"
>
  <button
    aria-disabled="true"
    class="root sizeSmall variantSecondary gridItem chevron disabled rounded"
    disabled=""
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="root sizeSmall variantSecondary gridItem chevron rounded"
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
</span>
`;

exports[`<SimplePagination /> should match snapshot for hasNext and hasPrevious 1`] = `
<span
  class="lightGrid pagination row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:center;align-content:center;align-items:center;padding:var(--global--space--0);width:100%"
>
  <button
    aria-disabled="false"
    class="root sizeSmall variantSecondary gridItem chevron rounded"
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="root sizeSmall variantSecondary gridItem chevron rounded"
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
</span>
`;

exports[`<SimplePagination /> should match snapshot for hasPrevious 1`] = `
<span
  class="lightGrid pagination row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:center;align-content:center;align-items:center;padding:var(--global--space--0);width:100%"
>
  <button
    aria-disabled="false"
    class="root sizeSmall variantSecondary gridItem chevron rounded"
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328.747 353.707L231.04 256l97.707-97.92-30.08-30.08-128 128 128 128 30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
  <button
    aria-disabled="true"
    class="root sizeSmall variantSecondary gridItem chevron disabled rounded"
    disabled=""
    style="flex-grow:0;flex-shrink:0;flex-basis:auto;display:inline-block;min-width:auto;margin:0 calc(0.5 * var(--global--space--3))"
  >
    <span
      class="btnContent"
    >
      <i
        class="root icon"
        style="width:24px;height:24px"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </span>
  </button>
</span>
`;
